--- a/client/server/package.json
+++ b/client/server/package.json
@@ -11,8 +11,7 @@
     "mongodb": "^7.0.0",
     "mongoose": "^9.1.5",
     "multer": "^2.0.2",
-    "nodemailer": "^7.0.12",
-    "nodemon": "^3.1.11"
+    "nodemailer": "^7.0.12"
   },
   "name": "server",
   "version": "1.0.0",
